# qpc_stm32f0308

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  stm32f0308_disco.ioc
Core/Inc/: main.h  stm32f0xx_it.h
Core/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
__linker/: ac6_arm.sct  gcc_arm.ld  llvm_arm.ld
__startup/: __vectors.c  __vectors_llvm.h
app/qpc_adapter/: qpc_app.c  qpc_app.h
app/qpc_adapter/qk/: bsp.c
cmake/: cubemx_hal.cmake  lib_app.cmake  lib_cmsis.cmake  lib_hal.cmake  lib_qpc.cmake  qpc_app.cmake  st-project.cmake
